
Changelog
=========

1.1 (unreleased)
----------------

- Fix a bug where reservations for partially available whole-day allocations
  did always span the whole day.
  [deiferni]

- Move timetable rendering from JavaScript to page templates for IE8
  performance optimization.
  [deiferni]

- Don't autohide messages from a closing lightbox but replace existing portal
  messages in the main column.
  [deiferni]

- Be a bit more tolerant with time user-input for allocations and reservations.
  Auto-Correct "24:00" to "00:00" and strip additional text like "13:00 Uhr".
  Don't validate start/end time of an allocation when "Whole Day" has been
  selected to avoid confusing error messages.
  [deiferni]

- Enable recurrence widget for allocations and reservations
  [deiferni]

- Adds the ability to add a description to reservations which may then be
  displayed in the calendar.
  [deiferni]

- Adds the ability to edit the reservation start/end time.
  [deiferni]

- Adds plone.app.multilingual support.
  [deiferni]


1.0.17 (unreleased)
-------------------

- Implement the filtering of form data in it's own method.
  This makes it easier to override.
  [mathias.leimgruber]

- Ensures that different logged in users don't see each others reservations.
  [deiferni]

1.0.16
------

- Fixes throttling being triggered on invalid reservations. Throttling should
  only be active if the reservation is actually made.

1.0.15
------

- Adds the ability to define pre-reservation script which may trigger
  validation errors on the reservation form.

1.0.14
------

- Adds the ability to print single reservations.

- Adds the ability to remove a reservation without sending an email.

1.0.13
------

- Adds a new 'latest reservations' report, showing reservations done in the last
  30 days.

1.0.12
------

- Removing expired sessions no longer results in orphan reserved slots. Existing
  orphan reserved slots are removed by the upgrade step.
